--- a/Inflation_Taxer/Assembly-CSharp.csproj
+++ b/Inflation_Taxer/Assembly-CSharp.csproj
@@ -56,7 +56,10 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\WallSpawner.cs" />
     <Compile Include="Assets\emotions_script.cs" />
+    <Compile Include="Assets\LogicMenagerScript.cs" />
+    <Compile Include="Assets\inflation_symbol.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
