--- a/Inflation_Taxer/Assembly-CSharp.csproj
+++ b/Inflation_Taxer/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\LogicMenagerScript.cs" />
     <Compile Include="Assets\inflation_symbol.cs" />
     <Compile Include="Assets\DetectorScript.cs" />
+    <Compile Include="Assets\CloudScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
